flappy.css
body {
    display: flex
}

#container {
    position: absolute;
    width: 1300px;
    height: 625px;
    top: 0;
    left: 0;
    overflow: hidden
}

#bg-sky {
    position: absolute;
    top:0;
    bottom:0;
    left:0;
    right:0;
    background: url(https://github.com/challenges-KW/flappy-bird-game/blob/main/images/bg-sky-525.png?raw=true) repeat-x;
    -webkit-animation: backgroundScroll 400s linear infinite;
    animation: backgroundScroll 22s linear infinite;
  }

    @-webkit-keyframes backgroundScroll {
        from {background-position: 0 0;}  
        to {background-position: -1100px 0;}  
        }
    @keyframes backgroundScroll {
        from {background-position: 0 0;}  
        to {background-position: -1100px 0;}  
        }

#bg-ground {
    position: absolute;
    top:0;
    bottom:0;
    left:0;
    right:0;
    top: 525px;
    background: url(https://github.com/challenges-KW/flappy-bird-game/blob/main/images/bg-ground.png?raw=true) repeat-x;
    -webkit-animation: backgroundScroll 400s linear infinite;
    animation: backgroundScroll 22s linear infinite;
    }
        
    @-webkit-keyframes backgroundScroll {
        from {background-position: 0 0;}  
        to {background-position: -1100px 0;}  
        }
    @keyframes backgroundScroll {
        from {background-position: 0 0;}  
        to {background-position: -1100px 0;}  
        }
        


.obstacle {
    width: 75px;
    height: 250px;
    position: absolute;
    background: linear-gradient(0deg, #00396c  50%, rgba(122, 58, 58, 0) 33%), linear-gradient(0deg, #B34EB2 66%, #2B4162 66%);  
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;
    /* left: 400px;
    /* animation: obstacle 5s infinite linear; */
}

/* @keyframes obstacle {
    0%{left:1300px}
    100%{left: -100px}
} */


.topObstacle {
    width: 75px;
    height: 150px;
    background: linear-gradient(0deg, #00396c  50%, rgba(122, 58, 58, 0) 33%), linear-gradient(0deg, #B34EB2 66%, #2B4162 66%);  
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    position: absolute;
    transform: rotate(180deg);
    /* bottom: 0px;
    left: 400px;
    animation: obstacle 5s infinite linear; */
}

/* @keyframes obstacle2 {
    0%{left:1300px}
    100%{left: -100px}
} */

#player {
    left: 0%;
    /* animation:fly 5s infinite; */

}

/* @keyframes fly{
    0% {
        left: 100%;
        top: 5px;
    }
    25% {
        top: 100px;

    }
    50% {
        top: 80px;

    }
    75% {
        top: 25px;
    }
    100% {
        left: -120px;
        top: 102px;
    }
} */

.player1 {
    position: relative;
}

